--- a/index.html
+++ b/index.html
@@ -4,9 +4,177 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Greatest Cricketer of All Time</title>
+    <!--stylesheet  -->
+    <link rel="stylesheet" href="css/style.css" />
+    <link href="css/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-<h1>Header</h1>
-</body>
-</html>
+    <body class="bg-gray-800">
+        <!--This is header section start -->
+        <header>
+          <div class="text-center header">
+            <h1 class="header-title">Greatest Cricketer of All Time</h1>
+            <p>Good players win titles, great players break records, but legends change the game. <br />Cricket is the most followed sport around the globe.</p>
+          </div>
+        </header>
+        <!--This is header section end -->
+        <main class="mb-36">
+          <!--This is main section start -->
+          <section class="lg:grid lg:grid-cols-12 gap-4 mx-5 md:mx-32 mt-5">
+            <!-- Left side  -->
+            <div class="grid md:grid-cols-3 lg:col-span-8 gap-4">
+              <!-- Card 1  -->
+              <div class="bg-black text-white shadow-xl card">
+                <div>
+                  <img class="w-full" src="image/taskin-ahmed.jpg" alt="taskin-ahmed" />
+                </div>
+                <div class="card-body">
+                  <h2 class="text-2xl font-semibold text-center">Taskin Ahmed</h2>
+                  <p class="text-center">
+                    <span class="font-semibold">Bowling 95</span> |
+                    <span class="font-semibold">Run 78</span>
+                  </p>
+                  <div class="text-center mt-2">
+                    <button class="w-full text-white font-semibold text-2xl py-2 bg-sky-500 text-center my-5 select-btn">Select</button>
+                  </div>
+                </div>
+              </div>
+              <!-- Card 2  -->
+              <div class="bg-black text-white shadow-xl card">
+                <div>
+                  <img class="w-full" src="image/shakib-al-hasa.jpg" alt="shakib-al-hasan" />
+                </div>
+                <div class="card-body">
+                  <h2 class="text-2xl font-semibold text-center">Shakib Al Hasan</h2>
+                  <p class="text-center">
+                     <span class="font-semibold">Bowling 89</span> |
+                    <span class="font-semibold">Run 95</span>
+                  </p>
+                  <div class="text-center mt-2">
+                    <button class="w-full text-white font-semibold text-2xl py-2 bg-sky-500 text-center my-5 select-btn" id="btn">Select</button>
+                  </div>
+                </div>
+              </div>
+              <!-- Card 3  -->
+              <div class="bg-black text-white shadow-xl card">
+                <div>
+                  <img class="w-full" src="image/mahmudullah.jpg" alt="mahmudullah" />
+                </div>
+                <div class="card-body">
+                  <h2 class="text-2xl font-semibold text-center">Mahmudullah</h2>
+                  <p class="text-center">
+                    <span class="font-semibold">Bowling 85</span> |
+                    <span class="font-semibold">Run 68</span>
+                  </p>
+                  <div class="text-center mt-2">
+                    <button class="w-full text-white font-semibold text-2xl py-2 bg-sky-500 text-center my-5 select-btn" id="btn">Select</button>
+                  </div>
+                </div>
+              </div>
+              <!-- Card 4  -->
+              <div class="bg-black text-white shadow-xl card">
+                <div>
+                  <img class="w-full" src="image/mosaddek-hossain.jpg" alt="mosaddek-hossain" />
+                </div>
+                <div class="card-body">
+                  <h2 class="text-2xl font-semibold text-center">Mosaddek Hossain</h2>
+                  <p class="text-center">
+                    <span class="font-semibold">Bowling 65</span> |
+                    <span class="font-semibold">Run 50</span>
+                  </p>
+                  <div class="text-center mt-2">
+                    <button class="w-full text-white font-semibold text-2xl py-2 bg-sky-500 text-center my-5 select-btn" id="btn">Select</button>
+                  </div>
+                </div>
+              </div>
+              <!-- Card 5  -->
+              <div class="bg-black text-white shadow-xl card">
+                <div>
+                  <img class="w-full" src="image/mushfiqur-rahim.jpg" alt="mushfiqur-rahim" />
+                </div>
+                <div class="card-body">
+                  <h2 class="text-2xl font-semibold text-center">Mushfiqur Rahim</h2>
+                  <p class="text-center">
+                    <span class="font-semibold">Bowling 35</span> |
+                    <span class="font-semibold">Run 86</span>
+                  </p>
+                  <div class="text-center mt-2">
+                    <button class="w-full text-white font-semibold text-2xl py-2 bg-sky-500 text-center my-5 select-btn" id="btn">Select</button>
+                  </div>
+                </div>
+              </div>
+              <!-- Card 6  -->
+              <div class="bg-black text-white shadow-xl card">
+                <div>
+                  <img class="w-full" src="image/tamim-iqbal.jpg" alt="tamim-iqbal" />
+                </div>
+                <div class="card-body">
+                  <h2 class="text-2xl font-semibold text-center">Tamim Iqbal </h2>
+                  <p class="text-center">
+                    <span class="font-semibold">Bowling 45</span> |
+                    <span class="font-semibold">Run 76</span>
+                  </p>
+                  <div class="text-center mt-2">
+                    <button class="w-full text-white font-semibold text-2xl py-2 bg-sky-500 text-center my-5 select-btn">Select</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Right Side  -->
+            <div class="lg:col-span-4 mt-5 md:mt-0">
+              <div class="overflow-x-auto">
+                <table class="table w-full">
+                  <!--table head -->
+                  <thead>
+                    <tr>
+                      <th></th>
+                      <th></th>
+                      <th class="text-2xl font-semibold">Selected - <span id="selected-total" class="text-orange-600">0</span></th>
+                    </tr>
+                  </thead>
+                  <tbody id="body-container">
+                    <!-- row 1 -->
+                  </tbody>
+                </table>
+              </div>
+              <!-- budget  -->
+              <div class="bg-black text-center mt-4 py-5">
+                <h2 class="text-2xl font-bold text-white">Budget</h2>
+                <img class="mx-auto mt-1" src="image/marker.png" alt="" />
+                <div class="mt-4 flex justify-between px-5">
+                  <p class="text-white text-xl font-semibold">Per Player :</p>
+                  <input class="w-2/4 px-2 py-1 text-black" type="text" id="player-budget" placeholder="player amount" />
+                </div>
+                <button id="calculate" class="text-white font-semibold text-xl py-2 hover:bg-sky-700 bg-sky-500 w-11/12 text-center my-5">Calculate</button>
+                <h1 class="mb-2 text-white text-2xl font-bold">Player Expenses : $<span id="player-expense" class="text-orange-600">00</span></h1>
+                <img class="mx-auto mt-1" src="image/marker.png" alt="" />
+                <div class="my-5 flex justify-between px-5">
+                  <p class="text-white text-xl font-semibold">Manager :</p>
+                  <input class="w-2/4 px-2 py-1 text-black" type="text" id="manager-amount" placeholder="manager amount" />
+                </div>
+                <div class="flex justify-between px-5">
+                  <p class="text-white text-xl font-semibold">Coach :</p>
+                  <input class="w-2/4 px-2 py-1 text-black" type="text" id="coach-amount" placeholder="coach amount" />
+                </div>
+                <button id="calculate-total" class="text-white font-semibold text-xl py-2 hover:bg-sky-700 bg-sky-500 w-11/12 text-center my-5">Calculate Total</button>
+                <h1 class="text-white text-2xl font-bold">Total : $<span class="text-orange-600" id="total">00</span></h1>
+                <img class="mx-auto mt-1" src="image/marker.png" alt="" />
+              </div>
+              <!-- budget End  -->
+            </div>
+          </section>
+        </main>
+        <!--This is main section end -->
+        <!--This is footer -->
+        <footer class="footer footer-center p-10 bg-black text-base-content rounded text-white">
+          <p class="text-center footer-text">Copyright @ 2022 All Rights Reserved</p>
+        </footer>
+        <!--This is js section -->
+        <script src="js/home.js"></script>
+        <script src="js/utilities.js"></script>
+        <script src="js/budget.js"></script>
+      </body>
+    </html>
+    
